# openlook

./: Build-LinuxXView.bash  imake
SlingShot/: Makefile
SlingShot/examples/: Makefile
SlingShot/examples/array_tile/: Makefile
SlingShot/examples/color/: Makefile
SlingShot/examples/color2/: Makefile
SlingShot/examples/group/: Makefile
SlingShot/examples/thermo/: Makefile
SlingShot/src/: Makefile  tacho.c
UIT/: Makefile  go.sh
UIT/Generic/src/: GenericHash.cc  GenericList.cc  Makefile  Makefile.g++  Makefile.svr4  Makefile.svr4.g++
UIT/UIT/include/c++/: GenericList.h  NoticePrompt.h
UIT/UIT/src/UIC/: BaseWindow.cc  Make.TARGET  Make.TARGET.svr4  Makefile  Makefile.NO_XVPS  Makefile.g++  Makefile.g++.NO_XVPS  Makefile.g++.svr4  Makefile.g++.svr4.NO_XVPS  Makefile.svr4  Makefile.svr4.NO_XVPS  PopUpWindow.cc  TTYDisplay.cc  UIChoice.cc  UIObject.cc
UIT/UIT/src/examples/: Makefile
clients/clock/: clock.c
clients/cmdtool/: cmdtool.c
clients/olwm/: menu.c  st.c  winicon.c
clients/props/: props.c
clients/textedit/: textedit.c
config/: XView.tmpl
contrib/examples/extensions/: Imakefile
deskset/pan/: Makefile.linux  control.c  hidexp.c  menu.c  misc.c  noteaction.c  pan.c
deskset/perf/: Makefile.simple  README  icon.xbm  rstattest.c  version.h
deskset/xvfilemgr/: BUGS  CREDITS  Imakefile.distrib  about.c  about.h  config.h  configure  directory.c  directory.h  edit.c  edit.h  error.c  file.c  filetype  filetype.1  find.h  misc.c  mkinstalldirs  mount.h  properties.c  properties.h  removable.h  select.h  workwindow.c  workwindow.h  xvfilemgr  xvfilemgr-0.2g.lsm  xvfilemgr.1  xvfilemgr.c
deskset/xvmoontool/: Makefile  README  riseset.c  riseset.h  xvmoontool-3.1.lsm
lib/libolgx/: ol_init.c  ol_sb.c
lib/libxview/attr/: attr.c  attr_copy.c
lib/libxview/base/: xv_init_x.c
lib/libxview/canvas/: canvas.h  cnvs_input.c
lib/libxview/color/: cms.c
lib/libxview/cursor/: curs_pri.c
lib/libxview/dnd/: dnd.c  dnd_dsdm.c  site.c  site_pblc.c
lib/libxview/file_chooser/: file_chsr.c  file_list.c  xv_path_util.c
lib/libxview/filter/: filter.c
lib/libxview/font/: font.c
lib/libxview/frame/: fm_destroy.c  fm_rescale.c  fm_set.c  fmcmd_get.c  fmcmd_set.c
lib/libxview/fullscreen/: fs_set.c
lib/libxview/icon/: icon_load.c
lib/libxview/io_stream/: file_strms.c  str_strms.c
lib/libxview/menu/: om_get.c  om_set.c  omi.c
lib/libxview/misc/: db_conv.c  expandname.c  getlogindr.c  hashfn.c  portable.h  quark.c  xv_deaf.c  xv_win_lp.c
lib/libxview/notice/: notice_pt.c  notice_set.c
lib/libxview/notify/: ndet.h  ndet_fcntl.c  ndet_loop.c  ndet_read.c  ndisdispch.c  ntfy.h  ntfy_debug.c  ntfy_test.c
lib/libxview/openwin/: openwin.c  openwin.h  ow_set.c  ow_view.c
lib/libxview/panel/: item_get.c  item_set.c  p_choice.c  p_drop.c  p_list.c  p_mlinetxt.c  p_num_txt.c  p_paint.c  p_set.c  p_txt.c  p_utl.c  panel.c
lib/libxview/screen/: scrn_get.c
lib/libxview/scrollbar/: sb.c  sb_compat.c
lib/libxview/sel/: sel_agent.c
lib/libxview/selection/: sel_item.c  sel_own.c  sel_req.c  sel_util.c
lib/libxview/server/: server.c  svr_x.c
lib/libxview/server_image/: svrim_pblc.c
lib/libxview/textsw/: ei_text.c  es_attr.c  es_file.c  ev_display.c  ev_edit.c  ev_op_bdry.c  ps_impl.c  txt_again.c  txt_attr.c  txt_e_menu.c  txt_event.c  txt_field.c  txt_file.c  txt_filter.c  txt_input.c  txt_menu.c  txt_once.c  txt_popup.c  txt_putkey.c  txt_search.c  txt_sel.c  txt_selsvc.c  txt_store.c
lib/libxview/ttysw/: cim_change.c  tty_init.c  tty_mapkey.c  tty_newtxt.c  ttyansi.c
lib/libxview/win/: win_input.c
lib/libxview/window/: window_cms.c
libguide/: Makefile
libguide/share/src/libguide/: makefile.linux
libguide/share/src/libguidexv/: makefile.linux
meminfo/: Makefile  meminfo.cc
pan/: Imakefile  Makefile  TRANS.TBL  event.c  folder.c  move.c  note.c  noteaction.c  pan.h  rmfolder.c  search.c  update.c  win.c  work.c
perf/: CHANGELOG  Imakefile  Makefile  icon_mask.xbm  perf.1  perf.c
xvfilemgr/: HISTORY  INSTALL  Imakefile  Imakefile.distrib  Makefile  Makefile.in  POSTING  TODO  about.c  about.h  config.h.in  configure.in  defaults.h  directory.c  directory.h  edit.c  edit.h  error.c  error.h  file.c  file.h  find.c  find.h  global.h  go.sh  misc.c  misc.h  mkinstalldirs  mount.c  mount.h  properties.c  properties.h  remote.c  remote.h  removable.c  removable.diff  removable.h  select.c  select.h  start.sh  (+6 more)
xview-base/clients/: Imakefile
xview-base/clients/clock/: clock.c
xview-base/clients/olvwm-4.1/: defaults.c
xview-base/clients/olwm/: screen.c  winframe.c
xview-base/clients/olwmslave/: propswin.c
xview-base/clients/props/: l10n_props.c  props.h
xview-base/clients/textedit/: textedit.c
xview-base/config/: XView.cf
xview-base/lib/libolgx/: ol_init.c
xview-base/lib/libxview/base/: base.h  generic.c  pkg_public.h  xv.c  xv_error.c  xv_init.c  xv_parse.c
xview-base/lib/libxview/canvas/: cnvs_set.c  cnvs_view.c
xview-base/lib/libxview/color/: cms_pblc.c
xview-base/lib/libxview/defaults/: defaults.c
xview-base/lib/libxview/dnd/: dnd_pblc.c
xview-base/lib/libxview/file_chooser/: file_list.c  xv_path_util.h
xview-base/lib/libxview/frame/: fm_cmdline.c  fm_get.c  fm_layout.c
xview-base/lib/libxview/fullscreen/: fs.c
xview-base/lib/libxview/help/: help.c
xview-base/lib/libxview/icon/: icon.c  icon_obj.c
xview-base/lib/libxview/io_stream/: othr_strms.c  output.c
xview-base/lib/libxview/menu/: om_compat.c  om_public.c  om_render.c
xview-base/lib/libxview/misc/: drop.c  gettext.h
xview-base/lib/libxview/notice/: notice.c  notice_ol.c
xview-base/lib/libxview/notify/: ndet_fd.c  ntfyclient.c  ntfyperror.c  sys_fcntl.c  sys_read.c  sys_select.c
xview-base/lib/libxview/openwin/: ow_resize.c  ow_view.c
xview-base/lib/libxview/panel/: p_btn.c  p_gauge.c  p_get.c  p_list.c  p_scroll.c  p_slider.c  p_view.c  panel.c
xview-base/lib/libxview/rect/: rect.c  (+1 more)
xvmoontool/: INSTALL  Imakefile  Makefile  color.pix  config.h  mini.icons  moon_icon  riseset.c  riseset.h  xvmoontool.c  xvmoontool.man
(+118 files in other folders)
